--- a/MauiTemplate/View/ExercisesPage.xaml
+++ b/MauiTemplate/View/ExercisesPage.xaml
@@ -7,7 +7,7 @@
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
 	Title="Exercises"
 	x:DataType="viewmodel:ExercisesPageViewModel"
-	Style="{StaticResource PageStyle}">
+	Style="{DynamicResource PageStyle}">
 
 	<StackLayout>
 		<ScrollView VerticalOptions="FillAndExpand">
