--- a/MauiTemplate/View/ImportExportPage.xaml
+++ b/MauiTemplate/View/ImportExportPage.xaml
@@ -7,7 +7,7 @@
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
 	Title="ImportExportPage"
 	x:DataType="viewmodel:ImportExportPageViewModel"
-	Style="{StaticResource PageStyle}">
+	Style="{DynamicResource PageStyle}">
 
 	<StackLayout>
 		<Button Command="{Binding LoadFileCommand}" Text="Import" />
