--- a/MauiTemplate/View/RoutineDetailsPage.xaml
+++ b/MauiTemplate/View/RoutineDetailsPage.xaml
@@ -8,7 +8,7 @@
 	Title="{Binding Routine.Name}"
 	x:DataType="viewmodel:RoutineDetailsPageViewModel"
 	Shell.FlyoutBehavior="Disabled"
-	Style="{StaticResource PageStyle}">
+	Style="{DynamicResource PageStyle}">
 	<VerticalStackLayout>
 		<ScrollView VerticalOptions="FillAndExpand">
 			<CollectionView ItemsSource="{Binding AddedExercises}">
