add current date

--- a/MauiTemplate/View/MainPage.xaml
+++ b/MauiTemplate/View/MainPage.xaml
@@ -37,7 +37,7 @@
 					HorizontalOptions="Fill"
 					Style="{DynamicResource DynamicFrame}">
 					<StackLayout>
-						<Label FontSize="24" Text="5-aug" />
+						<Label FontSize="24" Text="{Binding CurrentDate}" />
 						<Label FontSize="18" Text="3 days since last exercise" />
 					</StackLayout>
 				</Frame>
