--- a/MauiTemplate/View/ExercisesPage.xaml
+++ b/MauiTemplate/View/ExercisesPage.xaml
@@ -14,28 +14,30 @@
 			<CollectionView ItemsSource="{Binding ExerciseList}">
 				<CollectionView.ItemTemplate>
 					<DataTemplate x:DataType="model:Exercise">
-						<Grid Margin="0,5,0,5" Style="{StaticResource GridStyle}">
-							<Grid.RowDefinitions>
-								<RowDefinition />
-							</Grid.RowDefinitions>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="3*" />
-								<ColumnDefinition Width="1*" />
-							</Grid.ColumnDefinitions>
-							<Grid.GestureRecognizers>
-								<TapGestureRecognizer
-									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=GoToExerciseDetailsCommand}"
-									CommandParameter="{Binding .}"
-									NumberOfTapsRequired="1" />
-							</Grid.GestureRecognizers>
+						<Frame Style="{DynamicResource DynamicFrameCollectionItem}">
+							<Grid Style="{StaticResource GridStyle}">
+								<Grid.RowDefinitions>
+									<RowDefinition />
+								</Grid.RowDefinitions>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="3*" />
+									<ColumnDefinition Width="1*" />
+								</Grid.ColumnDefinitions>
+								<Grid.GestureRecognizers>
+									<TapGestureRecognizer
+										Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=GoToExerciseDetailsCommand}"
+										CommandParameter="{Binding .}"
+										NumberOfTapsRequired="1" />
+								</Grid.GestureRecognizers>
 
-							<Label Margin="10,5,0,5" Text="{Binding Name}" />
-							<ImageButton
-								Grid.Column="1"
-								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=DeleteCommand}"
-								CommandParameter="{Binding .}"
-								Style="{StaticResource DeleteButton}" />
-						</Grid>
+								<Label Margin="10,5,0,5" Text="{Binding Name}" />
+								<ImageButton
+									Grid.Column="1"
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=DeleteCommand}"
+									CommandParameter="{Binding .}"
+									Style="{StaticResource DeleteButton}" />
+							</Grid>
+						</Frame>
 					</DataTemplate>
 				</CollectionView.ItemTemplate>
 			</CollectionView>
