--- a/MauiTemplate/View/RoutinesPage.xaml
+++ b/MauiTemplate/View/RoutinesPage.xaml
@@ -13,28 +13,30 @@
 		<CollectionView ItemsSource="{Binding RoutinesList}">
 			<CollectionView.ItemTemplate>
 				<DataTemplate x:DataType="model:Routine">
-					<Grid Margin="0,5,0,5" Style="{StaticResource GridStyle}">
-						<Grid.RowDefinitions>
-							<RowDefinition />
-						</Grid.RowDefinitions>
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="3*" />
-							<ColumnDefinition Width="1*" />
-						</Grid.ColumnDefinitions>
-						<Grid.GestureRecognizers>
-							<TapGestureRecognizer
-								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=RoutineTappedCommand}"
-								CommandParameter="{Binding .}"
-								NumberOfTapsRequired="1" />
-						</Grid.GestureRecognizers>
+					<Frame Style="{DynamicResource DynamicFrameCollectionItem}">
+						<Grid Style="{StaticResource GridStyle}">
+							<Grid.RowDefinitions>
+								<RowDefinition />
+							</Grid.RowDefinitions>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="3*" />
+								<ColumnDefinition Width="1*" />
+							</Grid.ColumnDefinitions>
+							<Grid.GestureRecognizers>
+								<TapGestureRecognizer
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=RoutineTappedCommand}"
+									CommandParameter="{Binding .}"
+									NumberOfTapsRequired="1" />
+							</Grid.GestureRecognizers>
 
-						<Label Margin="10,5,0,5" Text="{Binding Name}" />
-						<ImageButton
-							Grid.Column="1"
-							Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=DeleteCommand}"
-							CommandParameter="{Binding .}"
-							Style="{StaticResource DeleteButton}" />
-					</Grid>
+							<Label Margin="10,5,0,5" Text="{Binding Name}" />
+							<ImageButton
+								Grid.Column="1"
+								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=DeleteCommand}"
+								CommandParameter="{Binding .}"
+								Style="{StaticResource DeleteButton}" />
+						</Grid>
+					</Frame>
 				</DataTemplate>
 			</CollectionView.ItemTemplate>
 		</CollectionView>
